--- a/final/templates/index.html.jinja
+++ b/final/templates/index.html.jinja
@@ -17,7 +17,7 @@
 {% block main%}
 <div class="container text-center">
     <div class="row">
-        <div class="col-md-2 col-xl-3" style="background-color:beige">
+        <div class="col-md-2 col-xl-3" style="background-color:rgb(220, 239, 245)">
             <form action="{{url_for('index')}}" method="get">
                 <select class="form-select" aria-label="Default select example" name="area">
                     <option selected>{{show_area}}</option>
