--- a/731_flask_dash/templates/auth/login.html.jinja
+++ b/731_flask_dash/templates/auth/login.html.jinja
@@ -14,6 +14,18 @@
         {{ form.password.label(class='form-label')}} {{ form.password(class='form-control')}}
     </div>
     <input type="submit" value="確定" class="btn btn-primary">
+    <a href="/auth/register" class="ps-3">註冊帳號</a>
 
 </form>
+{% if form.email.errors %}
+<ul>
+    {% for error in form.email.errors %}
+    <li>
+        <div class="'alert alert-warngin" role="alert">
+            {{error}}
+        </div>
+    </li>
+    {% endfor %}
+</ul>
+{% endif %}
 {% endblock%}
